--- a/roles/persistent_volume/templates/deployment.j2
+++ b/roles/persistent_volume/templates/deployment.j2
@@ -4,11 +4,14 @@ metadata:
   name: nfs-client-provisioner
 ---
 kind: Deployment
-apiVersion: extensions/v1beta1
+apiVersion: apps/v1
 metadata:
   name: nfs-client-provisioner
 spec:
   replicas: 1
+  selector:
+    matchLabels:
+      app: nfs-client-provisioner
   strategy:
     type: Recreate
   template:
